--- a/generateinfo.css
+++ b/generateinfo.css
@@ -1,14 +1,31 @@
-.sideBarNames{
-    display: block;
-    height: 20px;
-    text-align: center;
-    padding-top: 0px;
-    margin-bottom: 50px;
-}
-
-#flexContainer{
+#container{
     display: flex;
     flex-direction: row;
-    gap: 20px;
+}
 
+#infoPanel{
+    width: 100%;
+    margin-left:8%;
+}
+
+button {
+    display: flex;
+    justify-content: center;
+ 
+    height: 20px;
+    background: none!important;
+    border: none;
+    padding: 0!important;
+    width: 200px;
+    /*optional*/
+    font-family: arial, sans-serif;
+    /*input has OS specific font-family*/
+    color: #069;
+    text-decoration: underline;
+    cursor: pointer;
+    
+}
+
+#selectBossIntro{
+    margin-left: 35%;
 }
