--- a/Styles/HomePage.css
+++ b/Styles/HomePage.css
@@ -1,11 +1,16 @@
-#formPanel{
+.homePageDiv{
+    height: 100vh;
+    background-color:rgb(46, 45, 45); 
+}
+
+.formPanel{
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-bottom: 10px;
 }
 
-#title{
+.homePageTitle{
     color: rgb(242, 242, 242);
     margin-top: 200px;
 }
@@ -17,23 +22,6 @@
     align-items: center;
     color: rgb(242, 242, 242);
     text-decoration: none;
-}
-.registerButton:visited { text-decoration: none; color:rgb(242, 242, 242); }
-
-.homePageDiv{
-    height: 100vh;
-    background-color:rgb(46, 45, 45); 
-}
-
-.registerAndSignIn{
-    display: flex;
-    justify-content: center;
-}
-.divider{
-    width: 5px;
-}
-
-.registerButton{
     width: 70px;
     height:  25px;
     border: 2px solid rgb(67, 63, 63);
@@ -41,6 +29,14 @@
     color: rgb(242, 242, 242);
 }
 
-.searchAndLoginButtons{
+.registerButton:visited { text-decoration: none; color:rgb(242, 242, 242); }
 
+.registerAndSignIn{
+    display: flex;
+    justify-content: center;
 }
+
+.divider{
+    width: 5px;
+}
+
